--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-shopping-cart": "^1.9.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
